--- a/src/assets/css/mheader/mheader.css
+++ b/src/assets/css/mheader/mheader.css
@@ -9,19 +9,26 @@
     margin: 0 auto;
     background-color: paleturquoise;
     display: flex;
+    justify-content: space-between;
+    padding-right: 20px;
+    align-items: center;
 }
-/* 로고 */
-.mheader .mheaderWrap .mlogo{
+/* 헤더 왼쪽(로고+메뉴) */
+.mheader .mheaderWrap .mheaderLeft{
+    display: flex;
+}
+.mheader .mheaderWrap .mheaderLeft .mlogo{
     width: 150px;
     height: 100px;
     background-color: plum;
 }
-.mheader .mheaderWrap .mMenu{
+.mheader .mheaderWrap .mheaderLeft .mMenu{
     display: flex;
     align-items: center;
 }
-.mheader .mheaderWrap .mMenu a{}
-.mheader .mheaderWrap .mMenu a li{
+.mheader .mheaderWrap .mheaderLeft .mMenu a{}
+.mheader .mheaderWrap .mheaderLeft .mMenu a li{
     margin: 0 20px;
-
 }
+/* 헤더 오른쪽 로그인 */
+.mheader .mheaderWrap .mheaderRight{}
