컨테이너 높이 지움 ㅇㅅ

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,7 +11,7 @@ div{
     width: 1200px;
     margin: 0 auto;
     background-color: pink;
-    height: 750px;
+    /* height: 750px; */
 }
 li{
     list-style: none;
