--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -34,9 +34,7 @@
     margin-bottom: 70px;
 }
 .eMidContainer .eCutImgContainer h1{
-    /* margin: 0 auto 30px ; */
     margin-bottom: 30px;
-    /* width: 1700px; */
     /* background-color: darkorchid; */
 }
 .eMidContainer .eCutImgContainer .eCutSlide{}
@@ -53,8 +51,8 @@
     margin-bottom: 70px;
 }
 .eMidContainer .eDesignerSlideContainer h1{
-    margin: 0 auto 30px ;
-    width: 1700px;
+    margin-bottom: 30px ;
+    /* width: 1700px; */
 }
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
     background-color: darkcyan;
@@ -97,6 +95,8 @@
 }
 .eMidContainer .ePriceReviewContainer .ePriceBox h1{
     margin-bottom: 30px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
 }
 .eMidContainer .ePriceReviewContainer .ePriceBox table{
     border-collapse: collapse;
@@ -169,7 +169,7 @@
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
     /* background-color: orangered; */
     width: 900px;
-    padding: 0 50px;
+    /* padding: 0 50px; */
  }
  /* 위치 왼쪽 - 이용시간 */
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
@@ -188,9 +188,15 @@
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
     display: flex;
+    margin-bottom: 5px;
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
     font-weight: bold;
+    width: 120px;
+    /* margin-right: 20px; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
+    color: #666;
  }
  /* 위치 왼쪽 - 오시는길 */
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
@@ -208,18 +214,26 @@
     /* background-color: lawngreen; */
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
-    display: flex;
+  
  }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p:first-child{
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
     font-weight: bold;
+    font-size: 20px;
+    color: #666;
+    /* line-height: 40px; */
+    padding-bottom: 10px;
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
     border: none;
     padding: 5px 10px;
+    width: 150px;
+    height: 50px;
+    font-size: 14px;
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
     background-color: #FFE500;
+    margin-right: 10px;
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
     background-color: #2FAF2D;
@@ -242,6 +256,8 @@
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
     font-size: 22px;
     font-weight: bold;
+    /* line-height: 40px; */
+    padding-bottom: 10px;
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox{
     
@@ -259,9 +275,9 @@
  /* 위치 오른쪽 */
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
     /* background-color: lightcoral; */
-    width: 900px;
-    display: flex;
-    justify-content: center;
+    width: 800px;
+    /* display: flex;
+    justify-content: center; */
  }
  .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
 
