--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -36,8 +36,14 @@
 .eMidContainer .eCutImgContainer h1{
     margin-bottom: 30px;
     /* background-color: darkorchid; */
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px ;
 }
-.eMidContainer .eCutImgContainer .eCutSlide{}
+.eMidContainer .eCutImgContainer .eCutSlide{
+    overflow: hidden;
+    width: 1500px;
+    white-space: nowrap ;
+}
 .eMidContainer .eCutImgContainer .eCutSlide img{
     width: 250px;
     height: 250px;
@@ -53,9 +59,11 @@
 .eMidContainer .eDesignerSlideContainer h1{
     margin-bottom: 30px ;
     /* width: 1700px; */
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
 }
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
-    background-color: darkcyan;
+    background-color: #f2f2f2;
     padding: 30px 200px;
     display: flex;
     justify-content: space-around;
@@ -64,19 +72,41 @@
 /* 디자이너소개 왼쪽 */
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
     padding-top: 30px;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 20px;
+    width: 350px;
+    height: 350px;
 }
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h2{
     margin-bottom: 20px;
 }
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h3{
+    background-color: #222;
+    color: #fff;
+    border-radius: 10px;
+    padding: 7px 10px;
+    width: 60px;
+}
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox p{
     margin: 7px;
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
+    /* background-color: #fff;
+    border-radius: 15px;
+    padding: 10px; */
 }
 
 /* 디자이너소개 오른쪽 */
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
-    width: 300px;
-    height: 300px;
-    background-color: red;
+    width: 400px;
+    height: 400px;
+    /* background-color: #ddd; */
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox img{
+    width: 400px;
+    height: 400px;
+    object-fit: contain;
 }
 
 /*============= 가격 + 후기 =============*/
@@ -101,9 +131,20 @@
 .eMidContainer .ePriceReviewContainer .ePriceBox table{
     border-collapse: collapse;
     width: 700px;
+    border: none;
 }
 .eMidContainer .ePriceReviewContainer .ePriceBox table th{
     height: 50px;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
+    border-left: none;
+    border-right: none;
+    background-color: #f6f6f6;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
+    /* border-left: none; */
+    /* border-right: none; */
+    background-color: #f6f6f6;
 }
 .eMidContainer .ePriceReviewContainer .ePriceBox table td{
     padding-left: 5px;
@@ -114,36 +155,55 @@
     /* background-color: navy; */
     width: 700px;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox h1{
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    border-bottom: 1px solid #ddd;
     margin-bottom: 30px;
+    padding-bottom: 10px;
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
+    /* margin-bottom: 30px; */
+    /* border-bottom: 1px solid #ddd; */
+    /* padding-bottom: 10px; */
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
+    font-weight: bold;
 }
 /* 후기 슬라이드 */
 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
     width: 700px;
     /* background-color: darkorchid; */
     margin: 0 auto;
+    padding: 0 50px;
 }
-/* 후기 슬라이드 더보기버튼 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eMoreBtn{
-    text-align: right;
-}
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eMoreBtn a{
-    font-weight: bold;
-}
+
 
 /* 후기 슬라이드 이미지 */
 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
-    width: 700px;
+    width: 600px;
     margin-bottom: 30px;
+    /* margin-left: 50px; */
 }
 /* 후기 슬라이드 내용 */
 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
    /* background-color: darkorange; */
-   padding: 10px;
+   padding: 20px;
+   border: 1px solid #ddd;
+   border-radius: 20px;
+   width: 600px;
    /* width: 700px; */
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox h2{
-    margin-bottom: 10px;
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop{
+    display: flex;
+    align-items: center;
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop h2{
+    margin: 0 10px 10px 0;
+ }
+ .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop p{
+    color: #666;
  }
 
  /*============= 위치 =============*/
